--- a/app/blueprints/user/templates/user/dashboard.html
+++ b/app/blueprints/user/templates/user/dashboard.html
@@ -58,7 +58,7 @@
                         </div>
                         <input id="search_field"
                                class="block w-full h-full pl-8 pr-3 py-2 rounded-md text-gray-900 placeholder-gray-500 focus:outline-none focus:placeholder-gray-400 sm:text-sm"
-                               placeholder="Search products" type="search" onkeyup="SearchProducts(this)"/>
+                               placeholder="Search products" type="search" oninput="SearchProducts(this)"/>
                     </div>
                 </div>
             </div>
