--- a/app/blueprints/user/templates/user/includes/main_header.html
+++ b/app/blueprints/user/templates/user/includes/main_header.html
@@ -16,7 +16,7 @@
                     <div class="ml-10 flex items-baseline">
                         <a href="{{ url_for('user.dashboard') }}"
                            class="px-3 py-2 rounded-md text-sm font-medium {% if page == 'dashboard' %}text-white bg-indigo-800{% else %}text-indigo-200 hover:text-white hover:bg-indigo-600{% endif %} focus:outline-none focus:text-white focus:bg-indigo-600">Dashboard</a>
-                        <a href="{{ url_for('user.stores') }}"
+                        <a href="{{ url_for('user.syncs') }}"
                            class="ml-2 px-3 py-2 rounded-md text-sm font-medium {% if page == 'stores' %}text-white bg-indigo-800{% else %}text-indigo-200 hover:text-white hover:bg-indigo-600{% endif %} focus:outline-none focus:text-white focus:bg-indigo-600">My Syncs</a>
                         <a href="{{ url_for('user.settings') }}"
                            class="ml-2 px-3 py-2 rounded-md text-sm font-medium {% if page == 'settings' %}text-white bg-indigo-800{% else %}text-indigo-200 hover:text-white hover:bg-indigo-600{% endif %} focus:outline-none focus:text-white focus:bg-indigo-600">Settings</a>
